@@ -58,14 +58,18 @@ cutscene.miss8-2 = Our supply ships were shot down and lay scattered.
 cutscene.miss8-3 = Secure their filled containers of resources with haste.
 cutscene.miss8-4 = Take over the enemy base.
 
-tutorial-1 = Welcome to Neoulandia, governor!
-tutorial-2 = Your first job here will to be establish a small profitable colony in this region.
-tutorial-3 = Firstly, place down a miniature drill and a miniature refinery. \n\nClick on the refinery to set the output.
-tutorial-4 = Do not forget to connect electricity to the refinery. \n\nPlace docks loading stations to move the newly refined materials to the core.
-tutorial-5 = Establish infrastructure to gather 400 tin, aluminium, and silver.\n\nYou can research a primitive fuel generator and an unloader without blueprints in your technology tree. You can acquire burnable materials through breaking trees around the map.
-tutorial-6 = Go to the north and enter the unexplored cave.
-tutorial-7 = It seems to contain important research materials. \n\nRight click on the unknown materials to harvest them. \n\nYou can use this to trade with the Colonial Authority to gain blueprints for various higher technologies.
-tutorial-8 = This concludes the tutorial on this region. Continue to develop the region. \n\nUnknown signals have been detected in nearby sectors.
+tutorial-1 = Welcome to Neoulandia, governor!\n\nYour first job here will to be establish a small profitable colony in this region.
+tutorial-2 = Firstly, place down a quickstarting miniature drill in the designated location.
+tutorial-3 = Place down a quickstarting miniature refinery in the designated location.\n\nClick on the refinery to set the output product.
+tutorial-4 = Activate the power node next to the existing power generation by double clicking on it twice\n\nand connect the power to the refinery with power nodes.
+tutorial-5 = Place a docks loading station in the highlighted location on the right\n\nwhile placing a docks unloading station next to the core on the left.
+tutorial-6 = To expand our infrastructures, we will need more power generation.\n\nRight click on any tree in the region such as the one highlighted to harvest timber to be used as fuel.
+tutorial-7 = Research the primitive fuel generator available and the unloader.\n\nThese are available without research blueprints.
+tutorial-8 = Place an unloader next to the core in the highlighted location and a fuel generator adjacent.
+tutorial-9 = Establish infrastructure to gather 700 tin, aluminium, and silver.
+tutorial-10 = Go to the north and enter the unexplored cave.
+tutorial-11 = It seems to contain important research materials. \n\nRight click on the unknown materials to harvest them.\n\nYou can use this to trade with the Colonial Authority to gain blueprints for various higher technologies.
+tutorial-12 = This concludes the tutorial on this region. Continue to develop the region.\n\nUnknown signals have been detected in nearby sectors.
 
 cutscene.emiss3-1-1 = Governor, for this mission you will be tasked with economic development of the region. \n\nFor now, set up a simple resource-harvesting operation.
 cutscene.emiss3-1-2 = Congratulations. We have have seen that you have succesfully set up mining operations in the region. \n\nNow, the next step is to set up manufacturing operations. This will contribute towards the taxes you owe.
