@@ -1,3 +1,8 @@
+[gray] 17/01/2025
+[white] - Revamped tutorial mission
+- Etigeum conveyor rebalanced
+- Passage speed nerfed
+
 [gray] 16/01/2025
 [white] - Mobile version fix
 
